# planter-box

./: pyproject.toml
planter/: _init_.py  api.py  control.py  sensor.py
planter/static/: main.js  styles.css
planter/templates/: index.html
